changing name and id on form

--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
   <form action="/add" method="post">
     <label for="clientname">
       <p>ClientName: </p>
-      <input type="text" name="clientname" id="clientname">
+      <input type="text" name="client" id="client">
     </label>
     <label for="password">
       <p>Password (Optional): </p>
