--- a/views/index.html
+++ b/views/index.html
@@ -13,15 +13,12 @@
       <p>ClientName: </p>
       <input type="text" name="client" id="client">
     </label>
-    <label for="password">
-      <p>Password (Optional): </p>
-      <input type="password" name="password" id="password">
-    </label>
     <button type="submit">
       Submit
     </button>
   </form>
   <h1>Download OpenVPN</h1>
+  <a href="/list">Check current active ClientName</a>
   <label for="down_clientname">
     <p>ClientName: </p>
     <input type="text" name="clientname_download" id="clientname_download">
